--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,9 @@ sky:
     admin-ttl: 999999999
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+aliyun:
+  oss:
+    endpoint: https://oss-cn-beijing.aliyuncs.com
+    bucketName: java-web-ai-bucket
+    region: cn-beijing
