--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,13 @@
 <!--            </dependency>-->
 
 
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-bom</artifactId>
+                <version>4.1.118.Final</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
