新增微信小程序C端开发，B端接口开发，客户端B端新增套餐管理页面接口开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,7 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: root
-
+  wechat:
+    appid: wxe7048aa119ed2be5
+    secret: 6f8c4ac82281f4bf3aa7fdf9a58c882b
 # 添加完整的Spring数据源配置
 spring:
   datasource:
