接入高德地图API配送范围开发（未使用自定义HttpClientUtil (Apache HttpClient 4.x）而使用OkHttpClient进行http请求

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -51,6 +51,11 @@ sky:
   wechat:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
+  take-out:
+    shop:
+      address: 河南省濮阳市华龙区万达广场 SOHO
+      amap:
+        key: a93130e723fee9f888f75e17929c0bc5
 
 aliyun:
   oss:
