--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -116,7 +116,11 @@
             <artifactId>poi-ooxml</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>4.0.3</version>
+        </dependency>
 
 
     </dependencies>
